# pathUI

./: CMakeLists.txt  README.md
ASAP/: CMakeLists.txt  MiniMap.cpp  PathologyViewer.cpp  PathologyViewer.h  PathologyWorkstation.pro  RenderThread.cpp  ScaleBar.cpp  main.cpp  pathologyworkstation.cpp  pathologyworkstation.h  pathologyworkstation.ui
ASAP/annotation/: Annotation.h  AnnotationTool.cpp  AnnotationWorkstationExtensionPlugin.cpp  AnnotationWorkstationExtensionPlugin.h  CMakeLists.txt  DotAnnotationTool.cpp  DotQtAnnotation.h  MeasurementAnnotationTool.cpp  PointSetAnnotationTool.cpp  PolyAnnotationTool.cpp  PolyQtAnnotation.h  QtAnnotation.h  SplineAnnotationTool.cpp  TextAnnotationTool.cpp  TextAnnotationTool.h  TextQtAnnotation.cpp  TextQtAnnotation.h  annotation_export.h  annotationplugin_export.h
ASAP/annotation/resources/: AnnotationDockWidget.ui  AnnotationWorkstationExtensionPlugin_resources.qrc
ASAP/basictools/: CMakeLists.txt  PanTool.cpp  PanTool.h  RectTool.h  RulerTool.cpp  RulerTool.h  ZoomTool.cpp  ZoomTool.h
ASAP/basictools/resources/: basictools_resources.qrc
ASAP/filters/: CMakeLists.txt  ColorDeconvolutionFilterPlugin.cpp  ColorDeconvolutionFilterPlugin.h  FilterDockWidget.cpp  FilterThread.cpp  FilterWorkstationExtensionPlugin.cpp  FilterWorkstationExtensionPlugin.h  NucleiDetectionFilterPlugin.cpp  NucleiDetectionFilterPlugin.h
ASAP/filters/resources/: ColorDeconvolutionFilter.ui  FilterDockWidget.ui  NucleiDetectionFilter.ui
ASAP/interfaces/: interfaces.h
ASAP/resources/: ASAP_resources.qrc  aboutdialog.ui
ASAP/visualization/: CMakeLists.txt  VisualizationWorkstationExtensionPlugin.cpp  VisualizationWorkstationExtensionPlugin.h
ASAP/visualization/resources/: VisualizationWorkstationExtensionPlugin.ui
annotation/: Annotation.cpp  Annotation.h  AnnotationList.cpp  CMakeLists.txt  XmlRepository.cpp
buildtools/: CMakeLists.txt
cmakemodules/: FindOPENSLIDE.cmake  FindPugiXML.cmake  FindUNITTEST.cmake
core/: Box.cpp  CMakeLists.txt  CmdLineProgressMonitor.cpp  CmdLineProgressMonitor.h  ImageSource.h  Patch.hpp  ProgressMonitor.cpp  filetools.cpp
executables/MultiResImageConverter/: CMakeLists.txt  MultiResImageConverter.cpp
executables/TestRunner/: CMakeLists.txt  TestRunner.cpp
executables/WSIConnectedComponents/: WSIConnectedComponents.cpp
imgproc/: CMakeLists.txt
imgproc/NucleiSegmentation/: CMakeLists.txt  FRST.h
imgproc/NucleiSegmentation/unittest/: TestFRST.cpp
imgproc/basicfilters/: CMakeLists.txt  FilterBase.h
imgproc/basicfilters/unittest/: TestBasicFilters.cpp
imgproc/opencv/: CMakeLists.txt  DIAGPathologyOpenCVBridge.h
imgproc/wholeslide/: CMakeLists.txt  ConnectedComponentsWholeSlideFilter.cpp  DistanceTransformWholeSlideFilter.cpp  NucleiDetectionWholeSlideFilter.cpp
io/multiresolutionimageinterface/: CMakeLists.txt  JPEG2000Codec.cpp  LIFImage.cpp  LIFImage.h  MultiResolutionImage.cpp  MultiResolutionImage.h  MultiResolutionImageReader.cpp  MultiResolutionImageWriter.cpp  OpenSlideImage.cpp  OpenSlideImage.h  TIFFImage.cpp  TIFFImage.h  VSIImage.cpp  VSIImage.h  multiresolutionimageinterface.i
io/multiresolutionimageinterface/unittest/: multiresolutionimageinterface-test.cpp  test_python_wrapping.py
